[project]
name = "finalproject-logunko-maksim-m25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksim"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
 packages = [
     { include = "valutatrade_hub" },
 ]
 
[tool.poetry.scripts]
valutatrade = "valutatrade_hub.main:main"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
[dependency-groups]
dev = [
    "ruff (>=0.14.10,<0.15.0)"
]

[tool.valutatrade]
# Пути к данным
data_dir = "data"
log_dir = "logs"

# Настройки курсов валют
rates_ttl_seconds = 300  # 5 минут
default_base_currency = "USD"

# Настройки логирования
log_file = "actions.log"
log_level = "INFO"
log_format = "detailed"  # detailed или json
log_max_size_mb = 10
log_backup_count = 5

# Настройки приложения
initial_usd_balance = 1000.0

# Настройки парсера
parser_update_interval = 300  # 5 минут в секундах
parser_log_file = "parser.log"
parser_log_level = "INFO"

# API ключи (в продакшене используйте переменные окружения)
exchangerate_api_key = "c9e445b3a03e91c0ed51a1c6"

